docs/apache-airflow-providers-microsoft-azure/6.0.0/_sources/_api/airflow/providers/microsoft/azure/triggers/wasb/index.rst.txt
:py:mod:`airflow.providers.microsoft.azure.triggers.wasb`
=========================================================

.. py:module:: airflow.providers.microsoft.azure.triggers.wasb


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.azure.triggers.wasb.WasbBlobSensorTrigger




.. py:class:: WasbBlobSensorTrigger(container_name, blob_name, wasb_conn_id = 'wasb_default', public_read = False, poke_interval = 5.0)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`

   WasbBlobSensorTrigger is fired as deferred class with params to run the task in
   trigger worker to check for existence of the given blob in the provided container.

   :param container_name: name of the container in which the blob should be searched for
   :param blob_name: name of the blob to check existence for
   :param wasb_conn_id: the connection identifier for connecting to Azure WASB
   :param poke_interval:  polling period in seconds to check for the status
   :param public_read: whether an anonymous public read access should be used. Default is False

   .. py:method:: serialize()

      Serializes WasbBlobSensorTrigger arguments and classpath.


   .. py:method:: run()
      :async:

      Makes async connection to Azure WASB and polls for existence of the given blob name.



